# tiny_results_v1.1

./: README.md  directory_structure.adoc
closed/Krai/code/NUCLEO-H7A3ZI-Q_X-CUBE-AI-7.3/: README.md
closed/Krai/code/NUCLEO-H7A3ZI-Q_X-CUBE-AI-8.0/: README.md
closed/Krai/code/NUCLEO-L4R5ZI_MICROTVM-NATIVE/: README.md
closed/Krai/code/NUCLEO-L4R5ZI_X-CUBE-AI-7.3/: README.md
closed/Krai/code/NUCLEO-L4R5ZI_X-CUBE-AI-8.0/: README.md
closed/Krai/results/: README.md  README_GRAPH.md
closed/Krai/systems/: NRF5340-DK_MICROTVM-CMSIS-NN.json  NUCLEO-H7A3ZI-Q_X-CUBE-AI-7.3.json  NUCLEO-H7A3ZI-Q_X-CUBE-AI-8.0.json  NUCLEO-L4R5ZI_MICROTVM-CMSIS-NN.json  NUCLEO-L4R5ZI_MICROTVM-NATIVE.json  NUCLEO-L4R5ZI_X-CUBE-AI-7.3.json  NUCLEO-L4R5ZI_X-CUBE-AI-8.0.json
closed/Nuvoton/code/: README.md  calibration.md
closed/Nuvoton/systems/: NUMAKER_M467HJ-zephyr.json
closed/STMicroelectronics/systems/: NUCLEO_H7A3ZI_Q.json  NUCLEO_L4R5ZI.json
closed/STMicrolectronics/code/: README.md
closed/STMicrolectronics/systems/: NUCLEO_H7A3ZI_Q.json  NUCLEO_L4R5ZI.json  NUCLEO_U575ZI_Q.json
closed/Skymizer/code/: README.md  arm_convolve_HWC_q7_fast_nonsquare.fixed  envsetup-mbed_os.sh  envsetup-zephyr.sh  requirements-mbed_os.txt  requirements-zephyr.txt
closed/Skymizer/code/NUCLEO_L4R5ZI-zephyr/vww/: CMakeLists.txt
closed/Skymizer/code/NUCLEO_L4R5ZI-zephyr/vww/src/: micro_model_setting.h  submitter_implemented.cpp
closed/Skymizer/code/NUCLEO_L4R5ZI-zephyr/vww/src/api/: submitter_implemented.h
closed/Skymizer/code/NUCLEO_L4R5ZI-zephyr/vww/vww01_code/: onnc_weight.h
closed/Skymizer/systems/: NUCLEO_L4R5ZI-mbed_os.json  NUCLEO_L4R5ZI-zephyr.json
closed/bosch/: README.md
closed/bosch/systems/: DISCO_F746NG.json  NUCLEO_G0B1RE.json  NUCLEO_H7A3ZI.json  NUCLEO_L4R5ZI.json  NUCLEO_U575ZI.json
closed/cTuning/code/: README.md
closed/cTuning/code/NUCLEO-L4R5ZI_MicroTVM_CMSIS_NN/: README.md
closed/cTuning/code/NUCLEO-L4R5ZI_MicroTVM_Native/: README.md
closed/cTuning/results/: README.md
closed/cTuning/systems/: NUCLEO-L4R5ZI_MicroTVM_CMSIS_NN.json  NUCLEO-L4R5ZI_MicroTVM_Native.json
closed/fpgaconvnet/: .gitignore  README.md  requirements.txt
closed/fpgaconvnet/code/: README.md
closed/fpgaconvnet/code/cora-z7/: README.md
closed/fpgaconvnet/code/zc706/: README.md
closed/fpgaconvnet/code/zedboard/: README.md
closed/fpgaconvnet/code/zybo/: README.md
closed/fpgaconvnet/systems/: cora-z7.json  zc706.json  zedboard.json  zybo.json
closed/kai_jiang/: README.md
closed/kai_jiang/code/vww/: app.c  app.h  main.c  submitter_implemented.cpp
closed/kai_jiang/systems/: ZCU106.json
closed/plumerai/: README.md
closed/plumerai/code/: README.md  plumerai_model_runner.h  submitter_implemented.cpp
closed/plumerai/systems/: CY8CPROTO-062-4343W.json  CY8CPROTO_062_4343W.json  DISCO-F746NG.json  DISCO_F746NG.json  NUCLEO-H7A3ZI-Q.json  NUCLEO-L4R5ZI.json  NUCLEO-U575ZI-Q.json  NUCLEO_H7A3ZI_Q.json  NUCLEO_L4R5ZI.json  NUCLEO_U575ZI_Q.json
closed/syntiant/systems/: ._TinyMLPerf_v1.1_Submission_Checklist.docx  TinyMLPerf_v1.1_Submission_Checklist.docx  syntiant_9120_0v9_30mhz.json
(+839 files in other folders)
